Fix parameter types

--- a/stacks/apps/dovetail-counts.yml
+++ b/stacks/apps/dovetail-counts.yml
@@ -26,10 +26,10 @@ Parameters:
   ArrangementsDynamodbTableName: { Type: AWS::SSM::Parameter::Value<String> }
   ArrangementsDynamodbAccessRoleArn: { Type: AWS::SSM::Parameter::Value<String> }
   DovetailRedisHostname: { Type: String }
-  DovetailS3Bucket: { Type: String }
-  DovetailS3ObjectStitchPrefix: { Type: String }
-  DovetailCdnLogsKinesisArn: { Type: String }
-  DovetailCountedBytesKinesisArn: { Type: String }
+  DovetailS3Bucket: { Type: AWS::SSM::Parameter::Value<String> }
+  DovetailS3ObjectStitchPrefix: { Type: AWS::SSM::Parameter::Value<String> }
+  DovetailCdnLogsKinesisArn: { Type: AWS::SSM::Parameter::Value<String> }
+  DovetailCountedBytesKinesisArn: { Type: AWS::SSM::Parameter::Value<String> }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
