--- a/stacks/apps/dovetail-counts.yml
+++ b/stacks/apps/dovetail-counts.yml
@@ -214,6 +214,7 @@ Resources:
       FilterPattern: '{ $.errorName = "ArrangementNotFoundError" }'
       LogGroupName: !Ref CountsFunctionLogGroup
       MetricTransformations:
+        # TODO Add dimensions
         - MetricName: !Sub missing_arrangement_${CountsFunction}
           MetricNamespace: !Ref kMetricFilterNamespace
           MetricValue: "1"
@@ -241,6 +242,7 @@ Resources:
       FilterPattern: '{ $.errorName = "KinesisPutError" }'
       LogGroupName: !Ref CountsFunctionLogGroup
       MetricTransformations:
+        # TODO Add dimensions
         - MetricName: !Sub kinesis_failure_${CountsFunction}
           MetricNamespace: !Ref kMetricFilterNamespace
           MetricValue: "$.count"
