Pass Dovetail Traffic key to 100A stack

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -43,6 +43,8 @@ Parameters:
 
   DovetailCountsLambdaCodeS3ObjectKey: { Type: String }
 
+  DovetailTrafficLambdaCodeS3ObjectKey: { Type: String }
+
   IdEcrImageTag: { Type: String }
   IdSecretsVersion: { Type: String }
   IdSharedAlbListenerRulePriorityPrefix: { Type: String }
