--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -974,6 +974,8 @@ Resources:
 
         DovetailCountsLambdaCodeS3ObjectKey: !Ref DovetailCountsLambdaCodeS3ObjectKey
 
+        DovetailTrafficLambdaCodeS3ObjectKey: !Ref DovetailTrafficLambdaCodeS3ObjectKey
+
         IdEcrImageTag: !Ref IdEcrImageTag
         IdSecretsVersion: !Ref IdSecretsVersion
         IdSharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Id, prefix]
