--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -175,6 +175,32 @@ Resources:
       TemplateURL: !Sub ${TemplateUrlPrefix}/dovetail-counts.yml
       TimeoutInMinutes: 10
 
+  DovetailTrafficStack:
+    Type: AWS::CloudFormation::Stack
+    Condition: IsStaging
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RootStackName: !Ref RootStackName
+        RootStackId: !Ref RootStackId
+        CodeS3Bucket: !Ref DeploymentPackageBucketName
+        CodeS3ObjectKey: !Ref DovetailTrafficLambdaCodeS3ObjectKey
+        MetricsKinesisStreamArn: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-traffic-lambda/METRICS_KINESIS_STREAM
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Traffic }
+      TemplateURL: !Sub ${TemplateUrlPrefix}/dovetail-traffic.yml
+      TimeoutInMinutes: 10
+
   IdStack:
     Type: AWS::CloudFormation::Stack
     Properties:
