Pass Dovetail Analytics code key to 300A stack

--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -30,6 +30,8 @@ Parameters:
   ExchangeHostname: { Type: String }
   IdHostname: { Type: String }
 
+  DovetailAnalyticsLambdaCodeS3ObjectKey: { Type: String }
+
   DovetailRouterEcrImageTag: { Type: String }
   DovetailRouterSecretsVersion: { Type: String }
   DovetailLegacyEcrImageTag: { Type: String }
