--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1135,6 +1135,8 @@ Resources:
 
         # App-specific parameters
 
+        DovetailAnalyticsLambdaCodeS3ObjectKey: !Ref AnalyticsIngestLambdaCodeS3ObjectKey
+
         DovetailRouterEcrImageTag: !Ref DovetailRouterEcrImageTag
         DovetailRouterSecretsVersion: !Ref DovetailrouterSecretsVersion
         DovetailLegacyEcrImageTag: !Ref DovetailEcrImageTag
