Output Castle Redis endpoint address

--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -328,3 +328,5 @@ Resources:
 Outputs:
   RedisCacheName:
     Value: !Ref RedisReplicationGroup
+  RedisCachePrimaryEndPointAddress:
+    Value: !GetAtt RedisReplicationGroup.PrimaryEndPoint.Address
