--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -416,5 +416,7 @@ Outputs:
     Value: !GetAtt FeederStack.Outputs.AlbName
   CastleRedisCacheName:
     Value: !GetAtt CastleStack.Outputs.RedisCacheName
+  CastleRedisCachePrimaryEndPointAddress:
+    Value: !GetAtt CastleStack.Outputs.RedisCachePrimaryEndPointAddress
   BetaDeployBucketRegionalDomainName:
     Value: !GetAtt BetaStack.Outputs.DeployBucketRegionalDomainName
