Pass Castle Redis endpoint to 300A stack

--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -25,6 +25,7 @@ Parameters:
   DeploymentPackageBucketName: { Type: String }
   EchoServiceToken: { Type: String }
   SharedEcsAsgInstanceSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
+  CastleRedisCachePrimaryEndPointAddress: { Type: String }
   CastleHostname: { Type: String }
   CorporateHostname: { Type: String }
   ExchangeHostname: { Type: String }
