--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1128,6 +1128,7 @@ Resources:
         DeploymentPackageBucketName: !GetAtt Constants.DeploymentPackageBucketName
         EchoServiceToken: !GetAtt CustomResourcesStack.Outputs.EchoServiceToken
         SharedEcsAsgInstanceSecurityGroupId: !GetAtt SharedEcsAsgStack.Outputs.InstanceSecurityGroupId
+        CastleRedisCachePrimaryEndPointAddress: !GetAtt Apps200AStack.Outputs.CastleRedisCachePrimaryEndPointAddress
         CastleHostname: !GetAtt Constants.CastleHostname
         CorporateHostname: !GetAtt Constants.CorporateHostname
         ExchangeHostname: !GetAtt Constants.ExchangeHostname
