Pass Dovetail Redis hostname to 300A stack

--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -30,6 +30,7 @@ Parameters:
   CorporateHostname: { Type: String }
   ExchangeHostname: { Type: String }
   IdHostname: { Type: String }
+  DovetailRedisHostname: { Type: String }
 
   DovetailAnalyticsLambdaCodeS3ObjectKey: { Type: String }
 
