--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1133,6 +1133,7 @@ Resources:
         CorporateHostname: !GetAtt Constants.CorporateHostname
         ExchangeHostname: !GetAtt Constants.ExchangeHostname
         IdHostname: !GetAtt Constants.IdHostname
+        DovetailRedisHostname: !Ref DovetailRedisHostname
 
         # App-specific parameters
 
