--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -46,6 +46,37 @@ Parameters:
   ProxyLambdaCodeS3ObjectKey: { Type: String }
 
 Resources:
+  DovetailAnalyticsStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      NotificationARNs:
+        - !Ref CloudFormationNotificationArn
+      Parameters:
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        RootStackName: !Ref RootStackName
+        RootStackId: !Ref RootStackId
+        CodeS3Bucket: !Ref DeploymentPackageBucketName
+        CodeS3ObjectKey: !Ref DovetailAnalyticsLambdaCodeS3ObjectKey
+        MetricsKinesisStreamArn: !Sub /prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/METRICS_KINESIS_STREAM
+        CastleRedisCachePrimaryEndPointAddress: !Ref CastleRedisCachePrimaryEndPointAddress
+        DynamoDbKinesisStreamArn: !Sub /prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/DYNAMODB_KINESIS_STREAM
+        DynamoDbTableName: !Sub /prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/DYNAMODB_TABLE_NAME
+        DynamoDbTtl: !Sub /prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/DYNAMODB_TTL
+        DynamoDbAccessRoleArn: !Sub /prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/DYNAMODB_ACCESS_ROLE
+        DovetailRedisHostname: !Ref DovetailRedisHostname
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Analytics }
+      TemplateURL: !Sub ${TemplateUrlPrefix}/dovetail-analytics.yml
+      TimeoutInMinutes: 10
+
   DovetailRouterStack:
     Type: AWS::CloudFormation::Stack
     Properties:
