VPC endpoint for DynamoDB

--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -100,6 +100,14 @@ Resources:
       RouteTableId: !Ref RouteTable
 
   # VPC endpoints
+  DynamodbEndpoint:
+    Type: AWS::EC2::VPCEndpoint
+    Properties:
+      RouteTableIds:
+        - !Ref RouteTable
+      ServiceName: !Sub com.amazonaws.${AWS::Region}.dynamodb
+      VpcEndpointType: Gateway
+      VpcId: !Ref VPC
   S3Endpoint:
     Type: AWS::EC2::VPCEndpoint
     Properties:
