--- a/stacks/custom-resources.yml
+++ b/stacks/custom-resources.yml
@@ -295,6 +295,8 @@ Resources:
         const cloudwatch = new AWS.CloudWatch();
 
         exports.handler = async (event, context) => {
+          console.log(event);
+
           try {
             const tags = event.ResourceProperties.Tags;
             const arn = event.ResourceProperties.AlarmArn;
