Fix handler name

--- a/stacks/custom-resources.yml
+++ b/stacks/custom-resources.yml
@@ -287,8 +287,8 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       Description: >-
-        tktktk
-      Handler: index.lambda_handler
+        Manages resource tags from CloudWatch Alarms.
+      Handler: index.handler
       InlineCode: |
         const response = require('cfn-response');
         const AWS = require('aws-sdk');
