Add ALB alarm tags

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -813,6 +813,7 @@ Resources:
         VpcPublicSubnet3Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet3Id
         NotificationsStackName: !Ref NotificationsStackName
         EchoServiceToken: !GetAtt CustomResourcesStack.Outputs.EchoServiceToken
+        CloudWatchAlarmTaggerServiceToken: !GetAtt CustomResourcesStack.Outputs.CloudWatchAlarmTaggerServiceToken
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
