--- a/stacks/shared-alb.yml
+++ b/stacks/shared-alb.yml
@@ -67,6 +67,7 @@ Parameters:
   VpcPublicSubnet3Id: { Type: AWS::EC2::Subnet::Id }
   NotificationsStackName: { Type: String }
   EchoServiceToken: { Type: String }
+  CloudWatchAlarmTaggerServiceToken: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
@@ -266,6 +267,20 @@ Resources:
       Statistic: Sum
       Threshold: 5
       TreatMissingData: notBreaching
+  AlbHttp5xxAlarmTags:
+    Type: Custom::CloudWatchAlarmTags
+    Condition: IsProduction
+    Properties:
+      ServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+      AlarmArn: !GetAtt AlbHttp5xxAlarm.Arn
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
 
   WildcardUtilityRecordSetGroup:
     Type: AWS::Route53::RecordSetGroup
