--- a/stacks/custom-resources.yml
+++ b/stacks/custom-resources.yml
@@ -307,7 +307,7 @@ Resources:
             }
 
             if (event.RequestType === 'Create') {
-              // All all tags on the custom resource
+              // Create all tags on the custom resource
               await cloudwatch.tagResource({
                 ResourceARN: arn,
                 Tags: tags,
