--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -116,7 +116,7 @@ Resources:
     Condition: IsProduction
     Properties:
       ServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
-      AlarmArn: !GetAtt AlbHttp5xxAlarm.Arn
+      AlarmArn: !GetAtt TargetGroupHttp5xxAlarm.Arn
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
