--- a/stacks/apps/styleguide.yml
+++ b/stacks/apps/styleguide.yml
@@ -20,6 +20,7 @@ Parameters:
   EnvironmentTypeAbbreviation: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
+  CloudWatchAlarmTaggerServiceToken: { Type: String }
   VpcId: { Type: AWS::EC2::VPC::Id }
   SecretsBase: { Type: String }
   EcrImageTag: { Type: String }
@@ -70,7 +71,6 @@ Resources:
       VpcId: !Ref VpcId
   TargetGroupHttp5xxAlarm:
     Type: AWS::CloudWatch::Alarm
-    Condition: IsProduction
     Properties:
       AlarmName: !Sub INFO [Styleguide] Web server <${EnvironmentTypeAbbreviation}> RETURNING 5XX ERRORS
       AlarmDescription: !Sub >-
@@ -89,6 +89,19 @@ Resources:
       Statistic: Sum
       Threshold: 0
       TreatMissingData: notBreaching
+  TargetGroupHttp5xxAlarmTags:
+    Type: Custom::CloudWatchAlarmTags
+    Properties:
+      ServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+      AlarmArn: !GetAtt TargetGroupHttp5xxAlarm.Arn
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Styleguide }
 
   EcsService:
     Type: AWS::ECS::Service
