--- a/stacks/apps/styleguide.yml
+++ b/stacks/apps/styleguide.yml
@@ -101,6 +101,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:ops:cloudwatch-log-group-arn, Value: !GetAtt TaskLogGroup.Arn }
         - { Key: prx:dev:application, Value: Styleguide }
 
   EcsService:
