--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -124,6 +124,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
         - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:ops:cloudwatch-log-group-name, Value: !Ref WebTaskLogGroup }
         - { Key: prx:dev:application, Value: CMS }
 
   TaskRole:
