--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -223,6 +223,7 @@ Resources:
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         AmazonSesSmtpCredentialsGeneratorServiceToken: !Ref AmazonSesSmtpCredentialsGeneratorServiceToken
+        CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
         SharedRdsMysqlEndpoint: !Ref SharedRdsMysqlEndpoint
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
       Tags:
@@ -288,6 +289,7 @@ Resources:
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
+        CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
