--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -37,6 +37,7 @@ Parameters:
   AlbListenerRulePriorityPrefix: { Type: String }
   SecretsStackName: { Type: String }
   AmazonSesSmtpCredentialsGeneratorServiceToken: { Type: String }
+  CloudWatchAlarmTaggerServiceToken: { Type: String }
   S3SigningEndpointUrl: { Type: String }
   S3SigningAccessKeyId: { Type: String }
   SharedMemcachedEndpointAddress: { Type: String }
@@ -157,6 +158,21 @@ Resources:
           Value: !Ref AlbFullName
         - Name: TargetGroup
           Value: !GetAtt WebTargetGroup.TargetGroupFullName
+  WebTargetGroupHttp5xxAlarmTags:
+    Type: Custom::CloudWatchAlarmTags
+    Condition: IsProduction
+    Properties:
+      ServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+      AlarmArn: !GetAtt WebTargetGroupHttp5xxAlarm.Arn
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:ops:cloudwatch-log-group-name, Value: !Ref WebTaskLogGroup }
+        - { Key: prx:dev:application, Value: Exchange }
 
   ExecutionRole:
     Type: AWS::IAM::Role
