--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -69,6 +69,7 @@ Parameters:
   RootStackName: { Type: String }
   RootStackId: { Type: String }
   EchoServiceToken: { Type: String }
+  CloudWatchAlarmTaggerServiceToken: { Type: String }
   VpcId: { Type: AWS::EC2::VPC::Id }
   SecretsBase: { Type: String }
   EcrImageTag: { Type: String }
@@ -473,6 +474,22 @@ Resources:
       Statistic: Sum
       Threshold: 0
       TreatMissingData: notBreaching
+  WebTargetGroupHttp5xxAlarmTags:
+    Type: Custom::CloudWatchAlarmTags
+    Condition: IsProduction
+    Properties:
+      ServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+      AlarmArn: !GetAtt WebTargetGroupHttp5xxAlarm.Arn
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:ops:cloudwatch-log-group-name, Value: !Ref WebTaskLogGroup }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Feeder }
 
   WebEcsService:
     Type: AWS::ECS::Service
