--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -46,6 +46,7 @@ Parameters:
   SharedMemcachedEndpointAddress: { Type: String }
   SharedMemcachedEndpointPort: { Type: String }
   EchoServiceToken: { Type: String }
+  CloudWatchAlarmTaggerServiceToken: { Type: String }
   EcsLaunchEndpointsAccessSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   KmsEndpointAccessSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   SharedRdsMysqlEndpoint: { Type: String }
@@ -124,6 +125,21 @@ Resources:
           Value: !Ref AlbFullName
         - Name: TargetGroup
           Value: !GetAtt PublicWebTargetGroup.TargetGroupFullName
+  PublicWebTargetGroupHttp5xxAlarmTags:
+    Type: Custom::CloudWatchAlarmTags
+    Condition: IsProduction
+    Properties:
+      ServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+      AlarmArn: !GetAtt PublicWebTargetGroupHttp5xxAlarm.Arn
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:ops:cloudwatch-log-group-name, Value: !Ref PublicWebTaskLogGroup }
+        - { Key: prx:dev:application, Value: Networks }
 
   # This is the Rails app running in client mode, meaning it will connect to a
   # remote Sphinx server and run the public-facing web server. It receives
